# wire-server

charts/ldap-scim-bridge/templates/: cronjob.yaml  secret.yaml
docs/reference/: cassandra-schema.cql  conversation.md
libs/wire-api/: wire-api.cabal
libs/wire-api-federation/: wire-api-federation.cabal
libs/wire-api/test/golden/: testObject_NewConv_user_1.json  testObject_TeamConversationList_team_1.json  testObject_TeamConversationList_team_10.json  testObject_TeamConversationList_team_11.json  testObject_TeamConversationList_team_12.json  testObject_TeamConversationList_team_13.json  testObject_TeamConversationList_team_14.json  testObject_TeamConversationList_team_15.json  testObject_TeamConversationList_team_16.json  testObject_TeamConversationList_team_17.json  testObject_TeamConversationList_team_18.json  testObject_TeamConversationList_team_19.json  testObject_TeamConversationList_team_2.json  testObject_TeamConversationList_team_20.json  testObject_TeamConversationList_team_3.json  testObject_TeamConversationList_team_4.json  testObject_TeamConversationList_team_5.json  testObject_TeamConversationList_team_6.json  testObject_TeamConversationList_team_7.json  testObject_TeamConversationList_team_8.json  testObject_TeamConversationList_team_9.json  testObject_TeamConversation_team_1.json  testObject_TeamConversation_team_10.json  testObject_TeamConversation_team_11.json  testObject_TeamConversation_team_12.json  (+15 more)
services/brig/: brig.cabal
services/galley/: galley.cabal  package.yaml
tools/db/assets/: assets.cabal
tools/db/assets/src/Assets/: Lib.hs
(+72 files in other folders)
