cabal-version:  2.4
name:           assets
version:        1.0.0
synopsis:       TODO(leif)
category:       Network
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2022 Wire Swiss GmbH
license:        AGPL-3.0-only
build-type:     Simple

library
    hs-source-dirs: src
    exposed-modules:
        Assets.Lib
    ghc-options: -O2
    build-depends:
          base
        , brig-types

executable assets
    main-is:          Main.hs
    build-depends:
          base
        , assets
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2
